# back-bay-automation-3ed1u3

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
src/backend/app/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  logging_config.py  main.py
src/backend/app/api/: __init__.py
src/backend/app/core/: __init__.py  auth.py  config.py  events.py  security.py
src/backend/app/db/: __init__.py  base.py  init_db.py  session.py
src/backend/app/middleware/: __init__.py  auth_middleware.py  cors_middleware.py  logging_middleware.py  tenant_middleware.py
src/backend/app/models/: __init__.py  chat_session.py  chunk.py  client.py  document.py  embedding.py  message.py  organization.py  user.py
src/backend/app/schemas/: __init__.py  analytics.py  chat.py  chunk.py  client.py  document.py  embedding.py  organization.py  query.py  user.py
src/backend/app/services/: __init__.py  ai_service.py  analytics_service.py  auth.py  cache_service.py  chat_service.py  document_processor.py  ocr_service.py  vector_search.py
src/backend/app/tasks/: __init__.py  celery_app.py  cleanup_tasks.py  document_tasks.py  embedding_tasks.py  (+1 more)
src/backend/migrations/: __init__.py  env.py  script.py.mako
src/backend/scripts/: __init__.py  create_initial_data.py  generate_openapi.py  run_migrations.py  setup_dev_env.py
src/backend/tests/: __init__.py  conftest.py
(+276 files in other folders)
